--- a/sample.yaml
+++ b/sample.yaml
@@ -1,65 +1,53 @@
 --- # TODO:
 # - Model Generation Config: Temperature, Sampling and etc...
-# - Handling verbosity while batch usage
 
-# Vectorizer Config
-cache_dir: maec
-cache_docs: true
-cache_chunks: true
-cache_vector_db: true
-
-output_path: maec.json
-
+# VectorBase 
+#/home/erfan/Desktop/actives/card/src2
+vb_cache_dir: ./caches/sample_experiment
+vb_verbose: true
 split_overlap: 0.1
-num_retrievals: 30
-num_selections: 4
-
-# Questions Source
-questions_from_hf: false 
-questions_dataset_id: luisespinosa/maec-2020
-questions_dataset_split: train
-questions_dataset_column: text
-
-questions_from_file_lines: false
-questions_file_lines_path: ''
-
-questions_from_yaml: true
-questions_yaml_list: 
-  - In what sectors is Barcelona playing an important role?
-  - How many hours is BST behind Tehran Time?
-
-
-# Documents Source
+## Documents Source
 docs_from_hf: true 
-docs_dataset_id: luisespinosa/maec-2020
+docs_dataset_id: yixuantt/MultiHopRAG
+docs_dataset_subset: corpus
 docs_dataset_split: train
-docs_dataset_column: text
-
-docs_from_pdf_dir: false  
-docs_pdf_dir_path: pdfs/
-
-docs_from_file_lines: false
-docs_file_lines_path: ../datasets/arc/ARC_Corpus.txt
-
-# Embedding Model Source
-embedding_model_from_hf: true 
-embedding_model_id: thenlper/gte-small
+docs_dataset_column: body 
+## Embedding Model Source
+embedding_model_id: thenlper/gte-small #BAAI/bge-large-en-v1.5  #BAAI/llm-embedder
 embedding_model_device: cuda
-embedding_model_max_seq_len: null # if null, derive from model's max_seq_len
+chunk_size: 256 # <= model_max_seq_len
 
-# Generator Model Source
-generator_model_from_hf: true
-generator_model_id: microsoft/Phi-3-mini-4k-instruct
+
+
+# Retriever
+rets_cache_dir: ./caches/sample_experiment
+rets_verbose: true
+num_retrievals: 10 # line 67: top_k
+## Queries Source
+queries_from_hf: true 
+queries_dataset_id: yixuantt/MultiHopRAG
+queries_dataset_subset: MultiHopRAG
+queries_dataset_split: train
+queries_dataset_column: query
+
+
+
+# Generator
+gens_cache_dir: ./caches/sample_experiment
+gens_verbose: true
+num_selections: 4 # line 139: top_n = top_k
+## Generator Model Source
+generator_model_id: microsoft/Phi-3.5-mini-instruct
 generator_model_trust_remote_code: True
 generator_model_device: cuda
 generator_model_torch_dtype: bf16
-generator_model_max_new_tokens: 1024
-
-# Reranker Model
-reranker_model_from_hf: true
+generator_model_config:
+  - max_new_tokens: 8
+  - return_full_text: False
+  - temperature: 0
+## Reranker Model
 reranker_model_id: colbert-ir/colbertv2.0
-
-# RAG
+## RAG Prompts
 system_prompt: |
   Using the information contained in the context, give a comprehensive answer to the question.
   Respond only to the question asked, response should be concise and relevant to the question.
@@ -73,8 +61,8 @@ system_prompt: |
 
 context_prompt: |
   Context:
-  {context}
+  {CONTEXT}
   ---
   Now here is the question you need to answer.
-  {question}
+  {QUERY}
 
